--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.5",
     "@types/mdx": "^2.0.13",
+    "gray-matter": "^4.0.3",
     "motion": "^11.18.1",
     "next": "15.1.5",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
