--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/pro-theme": "^0.10.0",
-    "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.5",
@@ -21,6 +20,7 @@
     "motion": "^11.18.1",
     "next": "15.1.5",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
