--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3005",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,8 @@
     "next": "15.1.5",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.239.1",
+    "posthog-node": "^4.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
