--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "generate:ascii": "node scripts/generate-ascii-assets.mjs",
+    "dev": "node scripts/generate-ascii-assets.mjs && next dev --turbopack",
+    "build": "node scripts/generate-ascii-assets.mjs && next build",
     "start": "next start -p 3005",
     "lint": "next lint"
   },
