--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "digital-garden",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "bun@1.3.5",
   "scripts": {
     "generate:ascii": "node scripts/generate-ascii-assets.mjs",
     "dev": "node scripts/generate-ascii-assets.mjs && next dev --turbopack",
