--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node scripts/generate-ascii-assets.mjs && next dev --turbopack",
     "build": "node scripts/generate-ascii-assets.mjs && next build",
     "start": "next start -p 3005",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@chakra-ui/charts": "^3.30.0",
@@ -17,31 +17,34 @@
     "@emotion/react": "^11.14.0",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^15.5.9",
+    "@next/mdx": "16.1.6",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
     "motion": "^11.18.2",
-    "next": "15.1.5",
+    "next": "16.1.6",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.312.0",
     "posthog-node": "^4.18.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
     "@types/node": "^20.19.27",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9.39.2",
-    "eslint-config-next": "15.1.5",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3"
   }
 }
